--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
     "graphql-ws": "^6.0.4",
     "graphql-yoga": "^5.13.4",
     "hono": "^4.7.9"
